Fix TAC button alignment when expanded (#12238)

--- a/res/css/structures/_ThreadsActivityCentre.pcss
+++ b/res/css/structures/_ThreadsActivityCentre.pcss
@@ -19,7 +19,7 @@
 .mx_ThreadsActivityCentreButton {
     color: $secondary-content;
     height: 32px;
-    width: 32px;
+    min-width: 32px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -28,11 +28,11 @@
 
     &.expanded {
         /* align with settings icon */
-        margin-left: 20px;
+        margin-left: 25px;
 
         & > .mx_ThreadsActivityCentreButton_IndicatorIcon {
             /* align with settings label */
-            margin-right: 12px;
+            margin-right: 14px;
         }
     }
 
